# ReactionSystemsGUI

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
egui_node_graph2/: Cargo.toml
egui_node_graph2/src/: color_hex_utils.rs  editor_ui.rs  graph.rs  graph_impls.rs  id_type.rs  node_finder.rs  scale.rs  traits.rs  ui_state.rs
reaction_systems_gui/: Cargo.toml  build_web.sh  check.sh  setup_web.sh  start_server.sh
reaction_systems_gui/docs/: .gitignore  index.html  manifest.json  reaction_systems_gui.js  sw.js
reaction_systems_gui/src/: app.rs  app_logic.rs  helper.rs  lib.rs  main.rs  svg.rs  web.rs
