[package]
name = "reaction_systems_gui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "*"
eframe = "0.33"
anyhow = "1"
serde = { version = "1", optional = true }
colored = "*"
lalrpop-util = "*"
petgraph = ">=0.8"
resvg = "*"
fontdb = "*"
dyn-clone = "*"
petgraph-graphml = "*"
egui_node_graph2 = { path = "../egui_node_graph2" }
getrandom = "0.3" # dependency that has to be specified correctly for wasm
layout-rs = "0.1"
rfd = "*" # for file selection
ron = "*" # for serialization
rsprocess = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
assert = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
execution = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
bisimilarity = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }
grammar_separated = { version = "*", git = "https://github.com/elvisrossi/ReactionSystems.git" }


[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "*"
getrandom = { version = "0.3", features = ["wasm_js"]} # dependency that has to be specified correctly for wasm

[features]
default = []
persistence = ["serde", "egui_node_graph2/persistence", "eframe/persistence"]
